# rust_rock_paper_scissor

./: .gitignore  Cargo.toml  README.MD
data/: db.json
src/: main.rs  main_pet.rs
