[package]
name = "rock_paper_scissors"
version = "0.1.0"
authors = ["Nick  Tom Thomas <nickbetty2000@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version ="0.19.0", features = ["serde"]}
serde = {version="1.0.125",features = ["derive"]}
serde_json = "1.0.64"
chrono = {version="0.4.19",features= [ "serde"]}
rand = {version="0.8.3",defuault-features= false,features=["std"]}
tui = {version="0.14.0",default-features=false,features=["crossterm","serde"]}
thiserror = "1.0.24"
